--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,8 +1,3 @@
-<div class="container mx-auto p-4">
-  <div class="my-8">
-    <h1><%= t(".title") %></h1>
-
-    <p class="mb-2">This is the homepage for logged in users.</p>
-    <p>You can customize this page in <code>app/views/dashboard/show.html.erb</code></p>
-  </div>
-</div>
+<% if current_account_user.roles["interpreter"] %>
+  <%= render partial: "interpreter" %>
+<% end %>
