added some of tokani's colors to tailwind config

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -11,7 +11,7 @@
 
         <% if @accounts.exists? %>
           <div>
-            <%= link_to t(".create"), new_account_path, class: "btn btn-primary" %>
+            <%= link_to t(".create"), new_account_path, class: "btn bg-tokaniprimary-500 text-white hover:text-white hover:bg-tokaniprimary-400" %>
           </div>
         <% end %>
       </div>
