--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,3 +1,7 @@
 <% if current_account_user.roles["interpreter"] %>
   <%= render partial: "interpreter" %>
+<% elsif current_account_user.roles["agency_admin"] %>
+  <%= render partial: "agency_admin" %>
+<% else %>
+  <%= render partial: "general" %>
 <% end %>
