gradient on sidenav

--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -114,7 +114,7 @@
 <!-- Static sidebar for desktop -->
 <div class="hidden md:fixed md:inset-y-0 md:flex md:w-64 md:flex-col">
   <!-- Sidebar component, swap this element with another sidebar if you like -->
-  <div class="flex flex-grow flex-col overflow-y-auto border-r border-gray-200 bg-tokaniprimary-700 pt-5">
+  <div class="flex flex-grow flex-col overflow-y-auto border-r border-gray-200 bg-gradient-to-r from-tokaniprimary-600 via-tokaniprimary-700 to-tokaniprimary-800 pt-5">
     <div class="flex flex-shrink-0 items-center px-4">
       <%= image_tag("logo-white.png", class: "h-8 w-auto", alt: "Tokani") %>
     </div>
