--- a/app/views/dashboard/_interpreter.html.erb
+++ b/app/views/dashboard/_interpreter.html.erb
@@ -75,8 +75,7 @@
                                 </div>
                               </td>
                               <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
-                                <div class="text-gray-900">Front-end Developer</div>
-                                <div class="text-gray-500">Optimization</div>
+                                <div class="text-gray-900">Intepreter</div>
                               </td>
                               <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
                                 <span class="inline-flex rounded-full bg-green-100 px-2 text-xs font-semibold leading-5 text-green-800">Active</span>
