--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -2,6 +2,8 @@
   <%= render partial: "interpreter" %>
 <% elsif current_account_user.roles["agency_admin"] %>
   <%= render partial: "agency_admin" %>
+  <% elsif current_account_user.agency_admin? %>
+  <%= render partial: "agency_admin" %>
 <% elsif current_account_user.admin? %>
   <%= render partial: "tokani_admin" %>
 <% else %>
