--- a/app/views/accounts/account_invitations/new.html.erb
+++ b/app/views/accounts/account_invitations/new.html.erb
@@ -38,7 +38,7 @@
                 <label for="<%= role.to_s.parameterize %>" class="inline-block"><%= role.to_s.humanize %></label>
               </div>
             <% end %>
-          <% elsif current_account_user.agency_admin? %>
+          <% elsif current_account_user.agency_admin? || current_account_user.roles["agency_admin"] %>
             <% AccountUser::AGENCY_ROLES.each do |role| %>
               <div>
                 <%= form.check_box role, id: role.to_s.parameterize, class: "form-checkbox mr-1" %>
