interpreter form -need to place in correct spot

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <%= link_to t("shared.scaffold.new.title", model: "Appointment"), new_appointment_path, class: "btn btn-white" %>
+    <%= link_to t("shared.scaffold.new.title", model: "Appointment"), new_appointment_path, class: "btn btn-large btn-primary text-sm" %>
   </div>
 
   <%= tag.div id: ("appointments" if first_page?), class: "bg-white rounded-md shadow p-6 space-y-8" do %>
