--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
 
   <div class="flex-grow hidden w-full pb-6 lg:flex lg:w-auto lg:pb-0" data-toggle-target="toggleable">
     <div class="lg:flex-grow">
-      <%= render "shared/left_nav" %>
+      <%# render "shared/left_nav" %>
     </div>
 
     <div>
