--- a/app/assets/stylesheets/components/base.css
+++ b/app/assets/stylesheets/components/base.css
@@ -10,11 +10,11 @@ body {
 }
 
 a {
-  @apply text-blue-600;
+  /* @apply text-blue-600; */
 
   &:hover,
   &:focus {
-    @apply text-blue-500;
+    /* @apply text-blue-500; */
 
     transform: none;
   }
