--- a/app/views/interpreter_details/new.html.erb
+++ b/app/views/interpreter_details/new.html.erb
@@ -9,7 +9,7 @@
     </h1>
   </div>
 
-  <div class="p-8 bg-white rounded shadow">
+  <div class="p-8 bg-gray-100 rounded shadow">
     <%= render "form", interpreter_detail: @interpreter_detail %>
   </div>
 </div>
