--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -166,18 +166,38 @@
           <div data-toggle-target='toggleable' class="hidden py-2 space-y-2">   
             <ul class="list-none">
               <li>
-            <a href="#" class="text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex pl-3 items-center px-2 py-2 text-sm font-medium rounded-md">Requestor</a>
-          </li>
-          <li>
-            <a href="/admin/account_users/interpreter_details" class="text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex pl-3 items-center px-2 py-2 text-sm font-medium rounded-md">Interpreters</a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex pl-3 items-center px-2 py-2 text-sm font-medium rounded-md">Providers</a>
-          </li>
-          <li>
-        <a href="#" class="text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex pl-3 items-center px-2 py-2 text-sm font-medium rounded-md">Recipients</a>
-      </li>
-      </ul>
+                <%= link_to interpreter_index_path,  class: "text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 320 512" stroke-width="1.5" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-4 w-4">
+                  <path d="M32 32C14.3 32 0 46.3 0 64V288 448c0 17.7 14.3 32 32 32s32-14.3 32-32V320h95.3L261.8 466.4c10.1 14.5 30.1 18 44.6 7.9s18-30.1 7.9-44.6L230.1 309.5C282.8 288.1 320 236.4 320 176c0-79.5-64.5-144-144-144H32zM176 256H64V96H176c44.2 0 80 35.8 80 80s-35.8 80-80 80z"/>
+                  </svg>
+                  Requestors
+                <% end %>
+              </li>
+              <li>
+                <%= link_to interpreter_index_path,  class: "text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 320 512" stroke-width="1.5" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-4 w-4">
+                    <path d="M32 32C14.3 32 0 46.3 0 64S14.3 96 32 96h96V416H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H288c17.7 0 32-14.3 32-32s-14.3-32-32-32H192V96h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H160 32z"/>
+                  </svg>
+                  Interpreters
+                <% end %>
+              </li>
+              <li>
+                <%= link_to interpreter_index_path,  class: "text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 320 512" stroke-width="1.5" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-4 w-4">
+                      <path d="M32 32H64h96c88.4 0 160 71.6 160 160s-71.6 160-160 160H64v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V352 320 288 64C0 46.3 14.3 32 32 32zM64 288h96c53 0 96-43 96-96s-43-96-96-96H64V288z"/>   
+                    </svg>
+                    Providers
+                <% end %>
+              </li>
+              <li>
+                <%= link_to interpreter_index_path,  class: "text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 320 512" stroke-width="1.5" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-4 w-4">
+                      <path d="M32 32C14.3 32 0 46.3 0 64S14.3 96 32 96h96V416H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H288c17.7 0 32-14.3 32-32s-14.3-32-32-32H192V96h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H160 32z"/>
+                    </svg>
+                    Recipients
+                <% end %>
+              </li>
+            </ul>
           </div>
         </div>
         <a href= "#" class="text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
