interpreter and requestor index views; requestor form

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -7,5 +7,5 @@
 <% elsif current_account_user.admin? %>
   <%= render partial: "tokani_admin" %>
 <% else %>
-  <%= render partial: "interpreter_details2" %>
+  <%= render partial: "requestor_details" %>
 <% end %>
