--- a/app/views/requestor/index.html.erb
+++ b/app/views/requestor/index.html.erb
@@ -9,8 +9,8 @@
           <div class="px-4 sm:px-6 lg:px-8">
             <div class="sm:flex sm:items-center">
               <div class="sm:flex-auto">
-                <h1 class="text-xl font-semibold text-gray-900">Interpreters</h1>
-                <p class="mt-2 text-sm text-gray-700">A list of all the interpreters in your account.</p>
+                <h1 class="text-xl font-semibold text-gray-900">Requestors</h1>
+                <p class="mt-2 text-sm text-gray-700">A list of all the requestors in your account.</p>
               </div>
               <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
                 <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto">Add Interpreter</button>
@@ -22,9 +22,9 @@
                   <tr>
                     <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6">Name</th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Email</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Type</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Gender</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 sm:table-cell">Address</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Customer</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Site</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 sm:table-cell">Role</th>
                     <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Phone</th>
                     <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
                       <span class="sr-only">Edit</span>
@@ -32,26 +32,26 @@
                   </tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200 bg-white">
-                <% @interpreters_all.each do |interpreter| %>
+                <% @requestors_all.each do |requestor| %>
                   <tr>
                     <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-                        <%= interpreter.user.last_name %>,  <%= interpreter.user.first_name %>
+                        <%= requestor.user.last_name %>,  <%= requestor.user.first_name %>
                       <dl class="font-normal lg:hidden">
                         <dt class="sr-only">Email</dt>
-                        <dd class="mt-1 truncate text-gray-700"><%= interpreter.user.email %></dd>
-                        <dt class="sr-only">Type</dt>
-                        <dd class="mt-1 truncate text-gray-700"><%= interpreter.interpreter_type %></dd>
-                        <dt class="sr-only">Gender</dt>
-                        <dd class="mt-1 truncate text-gray-500"><%= interpreter.gender %></dd>
+                        <dd class="mt-1 truncate text-gray-700"><%= requestor.user.email %></dd>
+                        <dt class="sr-only">Customer</dt>
+                        <dd class="mt-1 truncate text-gray-700">Account, <%= requestor.account_id %></dd>
+                        <dt class="sr-only">Site</dt>
+                        <dd class="mt-1 truncate text-gray-500">Need to Add Sites</dd>
                       </dl>
                     </td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= interpreter.user.email %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= interpreter.interpreter_type %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= interpreter.gender %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= interpreter.address %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= interpreter.primary_phone %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= requestor.user.email %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"> Account: <%= requestor.account_id %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"> Need to Add Sites</td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= roles_readable(requestor.roles) %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell">Need to Add Phone</td>
                     <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                      <a href="#" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= interpreter.user.last_name %></span></a>
+                      <a href="#" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= requestor.user.last_name %></span></a>
                     </td>
                   </tr>
                 <% end %>
