--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,45 +1,87 @@
 <%= content_for :title, "Sites" %>
 <%= turbo_stream_from :sites %>
 
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <div>
-      <h1 class="h3">Sites</h1>
-
-      <div class="text-sm font-medium">
-        <span class="text-gray-500">Sort by:</span>
-        <%= sortable @sites, :name, "Name", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :contact_name, "Contact name", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :email, "Email", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :address, "Address", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :city, "City", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :state, "State", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :zip_code, "Zip code", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :active, "Active", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :backport_id, "Backport", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :notes, "Notes", class: "text-gray-700 mr-1" %>
-        <%= sortable @sites, :contact_phone, "Contact phone", class: "text-gray-700 mr-1" %>
+<div>
+  <%= render partial: "shared/sidenav" %>
+  <div class="flex flex-1 flex-col md:pl-64">
+    <main class="flex-1">
+      <div class="py-6">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
+          <div class="px-4 sm:px-6 lg:px-8">
+            <div class="sm:flex sm:items-center">
+              <div class="sm:flex-auto">
+                <h1 class="text-xl font-semibold text-gray-900">Sites</h1>
+                <div class="text-sm font-medium mt-2 text-gray-700">
+                  <span class="text-tokanisecondary-500">Sort by:</span>
+                  <%= sortable @sites, :name, "Name", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :contact_name, "Contact name", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :email, "Email", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :address, "Address", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :city, "City", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :state, "State", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :zip_code, "Zip code", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :active, "Active", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :backport_id, "Backport", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :notes, "Notes", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :contact_phone, "Contact phone", class: "text-gray-700 mr-1" %>
+                </div>
+                
+              </div>
+              <!-- <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto">Add Appointment</button>
+              </div> -->
+            </div>
+            <div class="-mx-4 mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:-mx-6 md:mx-0 md:rounded-lg">
+              <table class="min-w-full divide-y divide-gray-300">
+                <thead class="bg-gray-50">
+                  <tr>
+                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6">Name</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Email</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Address</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Contact Name</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 sm:table-cell">Contact Phone</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Active Status</th>
+                    <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
+                      <span class="sr-only">Edit</span>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody class="divide-y divide-gray-200 bg-white">
+                <% @sites.each do |site| %>
+                  <tr>
+                    <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
+                        <%= site.name %>
+                      <dl class="font-normal lg:hidden">
+                        <dt class="sr-only">Email</dt>
+                        <dd class="mt-1 truncate text-gray-700"><%= site.email %></dd>
+                        <dt class="sr-only">Address</dt>
+                        <dd class="mt-1 truncate text-gray-700"><%= site.address %></dd>
+                        <dt class="sr-only">Contact Name</dt>
+                        <dd class="mt-1 truncate text-gray-500"><%= site.contact_name %></dd>
+                      </dl>
+                    </td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= site.email %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= site.address %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= site.contact_name %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= site.contact_phone %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= site.active %></td>
+                    <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                      <a href="#" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= site.id %></span></a>
+                    </td>
+                  </tr>
+                <% end %>
+                  <!-- More appointments... -->
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-
-    <%= link_to t("shared.scaffold.new.title", model: "Site"), new_site_path, class: "btn btn-white" %>
-  </div>
-
-  <%= tag.div id: ("sites" if first_page?), class: "bg-white rounded-md shadow p-6 space-y-8" do %>
-    <%= render partial: "sites/index", collection: @sites, as: :site, cached: true %>
-
-    <div class="hidden only:flex flex-col items-center justify-between lg:flex-row">
-      <%= image_tag "empty.svg", class: "mb-4 lg:w-1/2" %>
-      <div class="flex-1 text-center">
-        <p class="mb-4 h3">Create your first Site</p>
-        <%= link_to t("shared.scaffold.new.title", model: "Site"), new_site_path, class: "btn btn-primary" %>
-      </div>
-    </div>
-  <% end %>
-
-  <% if @pagy.pages > 1 %>
+      <% if @pagy.pages > 1 %>
     <div class="my-6 text-center">
       <%== pagy_nav(@pagy) %>
     </div>
   <% end %>
+    </main>
+  </div>
 </div>
